--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "bootstrap": "^5.3.2",
+    "@reduxjs/toolkit": "^2.2.4",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.0",
     "buffer": "^6.0.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
+    "react-bootstrap": "^2.9.0-beta.1",
     "react-dom": "^18.2.0",
     "react-input-emoji": "^5.6.5",
-    "react-router-dom": "^6.22.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.4",
     "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8"
